--- a/ny_airbnb_model.ipynb
+++ b/ny_airbnb_model.ipynb
@@ -590,7 +590,9 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Let's display the first few rows of the scaled and prepared dataset\n",
-    "data_prepared.head()"
+    "data_prepared.head()\n",
+    "\n",
+    "data_prepared.drop('Unnamed:0')"
    ]
   },
   {
@@ -809,6 +811,15 @@
     "# Show the plot\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt"
    ]
   },
   {
